<resources>
    <string name="app_name">Pawstagram</string>


    <string name="logo_description">Pawstagram Logo</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_confirm">Confirm Password</string>
    <string name="login_text">Sign in</string>
    <string name="or_text">\ Or \ </string>
    <string name="sing_up_text">Sign up</string>
    <string name="search_text">Search</string>


    <string name="facebook_app_id">863062434038880</string>
    <string name="fb_login_protocol_scheme">fb863062434038880</string>


</resources>
